20200704-1.leetcode demo update and push.          2.some file update and push.